--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -1,3 +1,26 @@
-<p>
-  quotes-form works!
-</p>
+<h1>Post quote</h1>
+<div class="container-fluid">
+    <div class="row">
+        <form>
+            <div class="form-group">
+
+                <label for="name">Quote</label>
+                <input type="text" required class="form-control" id="name">
+
+            </div>
+            <div class="form-group">
+
+                <label for="description">Author</label>
+                <textarea class="form-control" id="description" rows="4" required></textarea>
+
+            </div>
+            <div class="form-group">
+                <label for="complete">Name</label>
+                <input type='date' id="complete" required>
+
+            </div>
+            <button type="Submit" class="btn btn-primary ">Publish Quote</button><br>
+
+        </form>
+    </div>
+</div>
