--- a/src/app/quote-detail/quote-detail.component.html
+++ b/src/app/quote-detail/quote-detail.component.html
@@ -1,4 +1,5 @@
-<p>
-  <!-- <i class="fas fa-thumbs-up"></i> -->
-  {{ quote.date }}
-</p>
+<div>
+<p> Date:   {{ quote.date |dateCount }} </p>
+<p> Author:  {{ quote.author }} </p>
+<p> Submitted By: {{  quote.submittedBy}} </p>
+</div>
