--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -1,3 +1,5 @@
 <p>
-  vote works!
+  <button class="col btn-btn success" (click)="upVotes(quote)">{{upVotes}}<i class="fa fa-thumbs-up"></i></button>
+  <button class="col btn-btn danger" (click)="downVotes(quote)">{{downVotes}}<i class="fa fa thumbs-down"></i></button>
+
 </p>
