--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -1,25 +1,29 @@
 <h1>Post quote</h1>
 <div class="container-fluid">
     <div class="row">
-        <form>
+        <form (ngSubmit)='submitQuote()' #quoteForm='ngForm'>
             <div class="form-group">
 
                 <label for="name">Quote</label>
-                <input type="text" required class="form-control" id="name">
+                <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name ="ngModel">
+
+
 
             </div>
             <div class="form-group">
 
                 <label for="description">Author</label>
-                <textarea class="form-control" id="description" rows="4" required></textarea>
+                <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.author" name="description"  #description ="ngModel">
+                </textarea>
 
             </div>
             <div class="form-group">
                 <label for="complete">Name</label>
-                <input type='date' id="complete" required>
+                <input type='text' id="complete" [(ngModel)]="newQuote.submittedBy" name="submittedBy"  #submittedBy ="ngModel">
+
 
             </div>
-            <button type="Submit" class="btn btn-primary ">Publish Quote</button><br>
+            <button type="submit" class="btn btn-primary ">Publish Quote</button>
 
         </form>
     </div>
