updated README.md file

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -13,7 +13,7 @@
 
 
     </div>
-    <!-- <app-quotes-form (addQuote)="addNewQuote($event)"></app-quotes-form> -->
+
 
 </div>
-<app-quotes-form></app-quotes-form>
+<app-quotes-form (addQuote)="addNewQuote($event)"></app-quotes-form>
