--- a/src/app/quotes-form/quotes-form.component.html
+++ b/src/app/quotes-form/quotes-form.component.html
@@ -7,21 +7,32 @@
                 <label for="name">Quote</label>
                 <input type="text" required class="form-control" id="name" [(ngModel)]="newQuote.name" name="name" #name ="ngModel">
 
-
+                <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+                    <p> Name is Required</p>
+                </div>
 
             </div>
+
+
             <div class="form-group">
 
                 <label for="description">Author</label>
-                <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.author" name="description"  #description ="ngModel">
+                <textarea class="form-control" id="description" rows="4" [(ngModel)]="newQuote.author" name="author"  #author ="ngModel" required>
                 </textarea>
 
+                <div [hidden]="author.valid || author.pristine" class="alert alert-danger">
+                  <p> Author is Required</p>
+                  </div>
             </div>
+
+
             <div class="form-group">
                 <label for="complete">Name</label>
-                <input type='text' id="complete" [(ngModel)]="newQuote.submittedBy" name="submittedBy"  #submittedBy ="ngModel">
+                <input type='text' id="complete" [(ngModel)]="newQuote.submittedBy" name="submittedBy"  #submittedBy ="ngModel" required>
 
-
+                <div [hidden]="submittedBy.valid || submittedBy.pristine" class="alert alert-danger">
+                  <p> Submitted By is Required</p>
+                  </div>
             </div>
             <button type="submit" class="btn btn-primary ">Publish Quote</button>
 
