--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -1,4 +1,15 @@
-body{
+/* body{
   font-family:sans-serif;
+  text-align: center;
 
+} */
+.main-page{
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+.quotes
+{
+  max-width: 35%;
 }
