--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -8,6 +8,8 @@
   flex-direction: column;
 
   align-items: center;
+  background: url("../../assets/images/med.jpg");
+  color:white;
 }
 .quotes
 {
